k8s/gcp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counselgpt-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counselgpt-api
  template:
    metadata:
      labels:
        app: counselgpt-api
    spec:
      nodeSelector:
        cloud.google.com/gke-accelerator: "nvidia-l4"         # GPU TYPE
        cloud.google.com/gke-accelerator-count: "1"           # GPU COUNT

      containers:
      - name: counselgpt-api
        image: IMAGE_REPLACE_ME
        resources:
          requests:
            nvidia.com/gpu: 1
            cpu: "2"
            memory: "8Gi"
          limits:
            nvidia.com/gpu: 1
            cpu: "4"
            memory: "16Gi"
        volumeMounts:
        - name: model-storage
          mountPath: /models

      volumes:
      - name: model-storage
        emptyDir:
          sizeLimit: 20Gi
