k8s/gcp/gcs-fuse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counselgpt-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counselgpt-api
  template:
    metadata:
      labels:
        app: counselgpt-api
    spec:
      # Remove initContainers completely
      
      containers:
      - name: counselgpt-api
        image: mathesh0208/counselgptapi:v7
        resources:
          limits:
            nvidia.com/gpu: 1  # Add GPU request
        volumeMounts:
        - name: gcs-models
          mountPath: /models
          readOnly: true

      volumes:
      - name: gcs-models
        csi:
          driver: gcsfuse.csi.storage.gke.io
          volumeAttributes:
            bucketName: counselgpt-models
