k8s/gcp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counselgpt-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "counselgpt-ip"
    networking.gke.io/managed-certificates: "counselgpt-ssl-cert"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - host: 136.110.236.198.nip.io 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: counselgpt-api
            port:
              number: 8000
